logs/validate.20260408-040821.log
Mode: isolate
Isolate: including Chap47 Chap18 Chap02
error: unexpected token, expected `;`
  --> src/Chap47/ChainedHashTable.rs:83:13
   |
83 |             by {
   |             ^^

error[E0405]: cannot find trait `ChainedHashTable` in this scope
   --> src/Chap47/StructChainedHashTable.rs:842:13
    |
842 |             ChainedHashTable<Key, Value, ChainList<Key, Value>, Metrics, H>
    |             ^^^^^^^^^^^^^^^^ not found in this scope

error[E0405]: cannot find trait `ChainedHashTable` in this scope
   --> src/Chap47/VecChainedHashTableStEph.rs:609:13
    |
609 |             ChainedHashTable<Key, Value, Vec<(Key, Value)>, Metrics, H>
    |             ^^^^^^^^^^^^^^^^ not found in this scope

error[E0405]: cannot find trait `ChainedHashTable` in this scope
   --> src/Chap47/LinkedListChainedHashTableStEph.rs:609:13
    |
609 |             ChainedHashTable<Key, Value, LinkedListStEphS<(Key, Value)>, Metrics, H>
    |             ^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find function `lemma_seq_pairs_remove_key_then_push` in this scope
   --> src/Chap47/VecChainedHashTableStEph.rs:230:25
    |
230 |                         lemma_seq_pairs_remove_key_then_push::<Key, Value>(
    |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find function `lemma_seq_pairs_no_key_not_in_map` in this scope
   --> src/Chap47/VecChainedHashTableStEph.rs:286:25
    |
286 |                         lemma_seq_pairs_no_key_not_in_map::<Key, Value>(bv, *key);
    |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find function `lemma_seq_pairs_last_key_gives_value` in this scope
   --> src/Chap47/VecChainedHashTableStEph.rs:314:29
    |
314 | ...                   lemma_seq_pairs_last_key_gives_value::<Key, Value>(
    |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find function `lemma_seq_pairs_no_key_not_in_map` in this scope
   --> src/Chap47/VecChainedHashTableStEph.rs:328:21
    |
328 |                     lemma_seq_pairs_no_key_not_in_map::<Key, Value>(bv, *key);
    |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find function `lemma_seq_pairs_has_key_in_map` in this scope
   --> src/Chap47/VecChainedHashTableStEph.rs:440:25
    |
440 |                         lemma_seq_pairs_has_key_in_map::<Key, Value>(original, *key, j_witness);
    |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find function `lemma_seq_pairs_no_key_not_in_map` in this scope
   --> src/Chap47/VecChainedHashTableStEph.rs:445:25
    |
445 |                         lemma_seq_pairs_no_key_not_in_map::<Key, Value>(original, *key);
    |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find function `lemma_seq_pairs_remove_key_then_push` in this scope
   --> src/Chap47/LinkedListChainedHashTableStEph.rs:231:25
    |
231 |                         lemma_seq_pairs_remove_key_then_push::<Key, Value>(
    |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find function `lemma_seq_pairs_no_key_not_in_map` in this scope
   --> src/Chap47/LinkedListChainedHashTableStEph.rs:288:25
    |
288 |                         lemma_seq_pairs_no_key_not_in_map::<Key, Value>(bv, *key);
    |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find function `lemma_seq_pairs_last_key_gives_value` in this scope
   --> src/Chap47/LinkedListChainedHashTableStEph.rs:314:29
    |
314 | ...                   lemma_seq_pairs_last_key_gives_value::<Key, Value>(
    |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find function `lemma_seq_pairs_no_key_not_in_map` in this scope
   --> src/Chap47/LinkedListChainedHashTableStEph.rs:328:21
    |
328 |                     lemma_seq_pairs_no_key_not_in_map::<Key, Value>(bv, *key);
    |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find function `lemma_seq_pairs_has_key_in_map` in this scope
   --> src/Chap47/LinkedListChainedHashTableStEph.rs:439:25
    |
439 |                         lemma_seq_pairs_has_key_in_map::<Key, Value>(original, *key, j_witness);
    |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find function `lemma_seq_pairs_no_key_not_in_map` in this scope
   --> src/Chap47/LinkedListChainedHashTableStEph.rs:444:25
    |
444 |                         lemma_seq_pairs_no_key_not_in_map::<Key, Value>(original, *key);
    |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error: aborting due to 16 previous errors

Some errors have detailed explanations: E0405, E0425.
For more information about an error, try `rustc --explain E0405`.
Elapsed: 4s
Sampled Memory Usage: peak rust_verify RSS: 3692MB, peak z3 RSS: 136MB, min free: 22592MB
Sampled CPU Usage: rust_verify: 82s, z3 children: 103s
